# gdsc-proto-clock-example

clients/rust_client/: Cargo.toml
clients/rust_client/src/: protos.rs
clients/rust_client/src/protos/: action.rs  clock.rs
schema/: action.proto  clock.proto
servers/rust_server/: Cargo.toml  build.rs
