[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
async-trait = "0.1.57"
tokio-tungstenite = { version = "*", features = ["native-tls"] }

env_logger = "0.9"
log = "0.4.17"

url = "2.0.0"

tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
